--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -33,6 +33,8 @@ pt:
             price:
               blank: O valor é obrigatório
               not_a_number: O valor informado é inválido
+              less_than: O valor deve ser de no máximo R$ 99,99
+              greater_than: O valor deve ser de no mínimo R$ 00,01
         user:
           attributes:
             firstName:
